tests/tooling/fixtures/native/execution/positive/switch_nonempty_case_fallthrough_return.objc3
module SwitchNonemptyCaseFallthroughReturn;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      let marker = 0;
      marker = marker + 1;
    case 2:
      return 42;
    default:
      return 7;
  }
}
