tests/tooling/fixtures/native/execution/negative/switch_nonempty_case_fallthrough_return_conservative_reject.objc3
module SwitchNonemptyCaseFallthroughReturnConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      let marker = 0;
      marker = marker + 1;
      break;
    case 2:
      return 42;
    default:
      return 7;
  }
}
